--- a/index.scss
+++ b/index.scss
@@ -77,13 +77,19 @@ body {
     a { 
         text-decoration: none;
         color: $color2;
+
         &:hover {
             color: $header;
-            font-size: larger;
+            letter-spacing: 0.3em;
+            transition: all 200ms ease-in-out;
         }
+        
     }
 
     #project-link, #writing-link { visibility: hidden; }
+    
+    
+    
     @media screen and (max-width: 500px) {
         #about-link { margin-left: 40%;}
     }
@@ -94,7 +100,7 @@ body {
 .navigation.scrolling {
     background-color: rgba(82, 93, 104, 0.856);
     
-    a { font-size: 50%;}
+    a { font-size: 50%; }
 
     #project-link, #writing-link { visibility: visible; }
     #about-link { margin-left: 0;}
@@ -103,9 +109,14 @@ body {
     .active {
         border-bottom: solid 3px $header;
         font-size: 80%;
+        transition: all 200ms ease-in-out;
     }
-    transition: all 400ms ease-in-out;
+
+    
+
+    transition: all 200ms ease-in-out;
 }
+
 
 #contents {
     text-align: center;
@@ -260,8 +271,9 @@ body {
 }
 
 #contact {
-    height: 100px;
+    height: 150px;
     background-color: $color1;
+
     ul {
         display: flex;
         flex-direction: row;
@@ -277,8 +289,16 @@ body {
             &:hover {
                 color: $header;
                 font-size: larger;
+                transition: all 200ms ease-in-out;
             }
         }
     }
+
+    p {
+        color: white;
+        text-align: center;
+        font-size: smaller;
+    }
+
 }
 
