--- a/index.css
+++ b/index.css
@@ -190,12 +190,15 @@ body {
 }
 
 .project-card {
+  position: relative;
   display: block;
   width: 90%;
   margin-left: 5%;
   max-width: 400px;
-  height: 400px;
+  height: 500px;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -206,7 +209,6 @@ body {
   -webkit-box-shadow: 4px 4px 15px #899cb4, -2px -4px 15px #f3f3f3;
           box-shadow: 4px 4px 15px #899cb4, -2px -4px 15px #f3f3f3;
   margin-bottom: 5px;
-  position: relative;
 }
 
 .project-card h4 {
@@ -216,43 +218,41 @@ body {
 }
 
 .project-card img {
+  margin-top: 2%;
   max-width: 90%;
-  max-height: 50%;
+  max-height: 45%;
 }
 
-.project-card div {
+.project-card p {
   position: absolute;
-  top: 0;
-  opacity: 0;
-  height: 400px;
-  border: solid transparent;
-  border-radius: 15px;
-  background-color: rgba(12, 25, 36, 0.897);
-  justify-items: center;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-}
-
-.project-card div p {
-  color: white;
+  bottom: 0;
+  color: #023158;
   text-align: center;
   font-size: large;
   line-height: 1.5em;
+  width: 98%;
+  margin-left: 1%;
 }
 
-.project-card div:hover {
-  opacity: 1;
-  -webkit-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
+.project-card div {
+  height: 45%;
+}
+
+.project-card div img {
+  max-height: 96%;
+  margin-bottom: 5%;
 }
 
 .article-card {
+  position: relative;
   display: block;
   width: 90%;
   margin-left: 5%;
   max-width: 400px;
   height: 300px;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -272,15 +272,24 @@ body {
 }
 
 .article-card img {
+  margin-top: 2%;
   max-width: 90%;
-  max-height: 50%;
+  max-height: 45%;
 }
 
 .article-card p {
+  position: absolute;
+  bottom: 0;
   color: #023158;
   text-align: center;
   font-size: large;
   line-height: 1.5em;
+  width: 98%;
+  margin-left: 1%;
+}
+
+.article-card img {
+  margin-top: 5%;
 }
 
 .projects {
