--- a/index.scss
+++ b/index.scss
@@ -13,13 +13,15 @@ $header: rgb(93, 182, 255);
     margin-bottom: 0;
 }
 
-@mixin grid-cards ($height: 400px, $shadow-bottom: rgb(137, 156, 180), $shadow-top: rgb(243, 243, 243), $background: $color2) {
+@mixin grid-cards ($height: 500px, $shadow-bottom: rgb(137, 156, 180), $shadow-top: rgb(243, 243, 243), $background: $color2) {
+    position: relative;
     display: block;
     width: 90%;
     margin-left: 5%;
     max-width: 400px;
     height: $height;
     padding: 0;
+    box-sizing: border-box;
     align-items: center;
     border: solid transparent;
     border-radius: 15px;
@@ -35,8 +37,20 @@ $header: rgb(93, 182, 255);
     }
        
     img {
+        margin-top: 2%;
         max-width:90%;
-        max-height: 50%;
+        max-height: 45%;
+    }
+
+    p {
+        position: absolute;
+        bottom: 0;
+        color: $color1;
+        text-align: center;
+        font-size: large;
+        line-height: 1.5em;
+        width: 98%;
+        margin-left: 1%;
     }
     
 }
@@ -192,8 +206,6 @@ body {
 
                 p { color: white; }
             }
-           
-          
         }
     }
     
@@ -213,40 +225,22 @@ body {
    
     @include grid-cards;
 
-    position: relative;
-    div {
-        position: absolute;
-        top: 0;
-        opacity: 0;
-        height: 400px;
-        border: solid transparent;
-        border-radius: 15px;
-        background-color: rgba(12, 25, 36, 0.897);
-        justify-items: center;
-        transition: all 200ms ease-in-out;
-        p {
-            color: white;
-            text-align: center;
-            font-size: large;
-            line-height: 1.5em;
-        }
-        &:hover {
-            opacity: 1;
-            transition: all 200ms ease-in-out;
-        }
+    div { 
+        height: 45%;
+    
+        img { max-height: 96%;  margin-bottom: 5%;}
+
     }
+
 }
 
 .article-card {
 
     @include grid-cards($height: 300px, $shadow-bottom: rgb(249, 252, 255), $shadow-top: rgb(168, 196, 230), $background: rgb(225, 236, 250));
 
-    p {
-        color: rgb(2, 49, 88);
-        text-align: center;
-        font-size: large;
-        line-height: 1.5em;
-    }
+    img { margin-top: 5%;}
+
+    // p { padding: 2%;}
 
 }
 
