--- a/index.scss
+++ b/index.scss
@@ -29,9 +29,10 @@ $header: rgb(93, 182, 255);
     text-decoration: none;
     box-shadow: 4px 4px 15px $shadow-bottom, -2px -4px 15px $shadow-top;
     margin-bottom: 5px;
+    font-family: 'Open Sans', sans-serif;
 
     h4 {
-        color: black;
+        color: $color1;
         text-align: center;
         font-size: larger;
     }
@@ -45,7 +46,7 @@ $header: rgb(93, 182, 255);
     p {
         position: absolute;
         bottom: 0;
-        color: $color1;
+        color: black;
         text-align: center;
         font-size: large;
         line-height: 1.5em;
@@ -132,7 +133,7 @@ body {
 }
 
 
-#contents {
+.contents {
     text-align: center;
 
     h1 {
@@ -140,8 +141,9 @@ body {
         color: $color1;
     }
     h3 {
-        letter-spacing: 0.16em;
+        letter-spacing: 0.2em;
         color: $header;
+        font-family: 'Open Sans', sans-serif;
     }
 }
 
@@ -151,7 +153,7 @@ body {
     padding: 1em;
     background-color: $color1;
 
-    #contents {
+    .contents {
         margin-top: 60px;
 
         .intro {
@@ -178,6 +180,7 @@ body {
                     text-align: center;
                     font-size: 250%;
                     color: $header;
+                    font-family: 'Open Sans', sans-serif;
                 }
 
             }
@@ -186,7 +189,7 @@ body {
 
         #technologies {
             min-height: 100vh;
-            .text {
+            .description {
                 box-sizing: border-box;
                 border: solid transparent;
                 border-radius: 15px;
@@ -195,8 +198,13 @@ body {
                 text-align: left;
                 padding: 2% 2% 4% 5%;
                 letter-spacing: 0.1em;
+                line-height: 1.8em;
 
-                h2 { letter-spacing: 0.1em; color: $color1;}
+                h2 { 
+                    letter-spacing: 0.2em; 
+                    color: $color1;
+                    font-family: 'Open Sans', sans-serif;
+                }
 
             }
             
@@ -240,8 +248,6 @@ body {
 
     img { margin-top: 5%;}
 
-    // p { padding: 2%;}
-
 }
 
 .projects { 
@@ -264,7 +270,7 @@ body {
     
 }
 
-#contact {
+.contact {
     height: 150px;
     background-color: $color1;
 
